fixed: selectors
